fix: Tinier on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -47,7 +47,7 @@
 /* Mobile */
 @media (max-width: 700px) {
   .main {
-    padding: 0 16px;
+    padding: 0 0;
   }
 
   .center {
@@ -59,14 +59,19 @@
     height: 300px;
   }
 
+  .center > div {
+    max-width: 90vw;
+  }
+
   .title {
-    font-size: 2.5rem;
-    margin-bottom: 0.4rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
 
   .description {
     font-size: 0.9rem;
     margin-bottom: 2rem;
+    display: none;
   }
 
   .githubImage {
